--- a/news.html
+++ b/news.html
@@ -173,6 +173,268 @@
           <p><span>News Page</span></p>
         </div>
       </div>
+
+      <!-- Unnamed (Repeater) -->
+      <div id="u564" class="ax_default">
+        <script id="u564_script" type="axure-repeater-template">
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u565" class="ax_default box_1 u565">
+            <div id="u565_div" class="u565_div"></div>
+            <div id="u565_text" class="text u565_text" style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Image) -->
+          <div id="u566" class="ax_default image u566">
+            <img id="u566_img" class="img u566_img" src="images/news/u566.svg"/>
+            <div id="u566_text" class="text u566_text" style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u567" class="ax_default heading_3 u567">
+            <div id="u567_div" class="u567_div"></div>
+            <div id="u567_text" class="text u567_text">
+              <p><span>Article Title</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u568" class="ax_default label u568">
+            <div id="u568_div" class="u568_div"></div>
+            <div id="u568_text" class="text u568_text">
+              <p><span>Article Author</span></p>
+            </div>
+          </div>
+
+          <!-- Article Subtext (Rectangle) -->
+          <div id="u569" class="ax_default paragraph u569" data-label="Article Subtext">
+            <div id="u569_div" class="u569_div"></div>
+            <div id="u569_text" class="text u569_text">
+              <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam </span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u570" class="ax_default label u570">
+            <div id="u570_div" class="u570_div"></div>
+            <div id="u570_text" class="text u570_text">
+              <p><span>Date</span></p>
+            </div>
+          </div>
+        </script>
+        <div id="u564-1" class="" style="width: 425px; height: 175px;">
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u565-1" class="ax_default box_1 u565" style="width: 425px; height: 175px; left: 0px; top: 0px;visibility: inherit">
+            <div id="u565-1_div" class="u565_div" style="width: 425px; height: 175px;visibility: inherit"></div>
+            <div id="u565-1_text" class="text u565_text" style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Image) -->
+          <div id="u566-1" class="ax_default image u566" style="width: 132px; height: 75px; left: 15px; top: 15px;visibility: inherit">
+            <img id="u566-1_img" class="img u566_img" src="images/news/u566.svg"/>
+            <div id="u566-1_text" class="text u566_text" style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u567-1" class="ax_default heading_3 u567" style="width: 132px; height: 39px; left: 15px; top: 101px;visibility: inherit">
+            <div id="u567-1_div" class="u567_div" style="width: 132px; height: 39px;visibility: inherit"></div>
+            <div id="u567-1_text" class="text u567_text" style="visibility: inherit">
+              <p><span>Article Title</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u568-1" class="ax_default label u568" style="width: 132px; height: 16px; left: 15px; top: 140px;visibility: inherit">
+            <div id="u568-1_div" class="u568_div" style="width: 132px; height: 16px;visibility: inherit"></div>
+            <div id="u568-1_text" class="text u568_text" style="visibility: inherit">
+              <p><span>Article Author</span></p>
+            </div>
+          </div>
+
+          <!-- Article Subtext (Rectangle) -->
+          <div id="u569-1" class="ax_default paragraph u569" data-label="Article Subtext" style="width: 250px; height: 145px; left: 157px; top: 21px;visibility: inherit">
+            <div id="u569-1_div" class="u569_div" style="width: 250px; height: 145px;visibility: inherit"></div>
+            <div id="u569-1_text" class="text u569_text" style="visibility: inherit">
+              <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam </span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u570-1" class="ax_default label u570" style="width: 30px; height: 16px; left: 390px; top: 5px;visibility: inherit">
+            <div id="u570-1_div" class="u570_div" style="width: 30px; height: 16px;visibility: inherit"></div>
+            <div id="u570-1_text" class="text u570_text" style="visibility: inherit">
+              <p><span>Date</span></p>
+            </div>
+          </div>
+        </div>
+        <div id="u564-2" class="" style="width: 425px; height: 175px;">
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u565-2" class="ax_default box_1 u565" style="width: 425px; height: 175px; left: 0px; top: 0px;visibility: inherit">
+            <div id="u565-2_div" class="u565_div" style="width: 425px; height: 175px;visibility: inherit"></div>
+            <div id="u565-2_text" class="text u565_text" style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Image) -->
+          <div id="u566-2" class="ax_default image u566" style="width: 132px; height: 75px; left: 15px; top: 15px;visibility: inherit">
+            <img id="u566-2_img" class="img u566_img" src="images/news/u566.svg"/>
+            <div id="u566-2_text" class="text u566_text" style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u567-2" class="ax_default heading_3 u567" style="width: 132px; height: 39px; left: 15px; top: 101px;visibility: inherit">
+            <div id="u567-2_div" class="u567_div" style="width: 132px; height: 39px;visibility: inherit"></div>
+            <div id="u567-2_text" class="text u567_text" style="visibility: inherit">
+              <p><span>Article Title</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u568-2" class="ax_default label u568" style="width: 132px; height: 16px; left: 15px; top: 140px;visibility: inherit">
+            <div id="u568-2_div" class="u568_div" style="width: 132px; height: 16px;visibility: inherit"></div>
+            <div id="u568-2_text" class="text u568_text" style="visibility: inherit">
+              <p><span>Article Author</span></p>
+            </div>
+          </div>
+
+          <!-- Article Subtext (Rectangle) -->
+          <div id="u569-2" class="ax_default paragraph u569" data-label="Article Subtext" style="width: 250px; height: 145px; left: 157px; top: 21px;visibility: inherit">
+            <div id="u569-2_div" class="u569_div" style="width: 250px; height: 145px;visibility: inherit"></div>
+            <div id="u569-2_text" class="text u569_text" style="visibility: inherit">
+              <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam </span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u570-2" class="ax_default label u570" style="width: 30px; height: 16px; left: 390px; top: 5px;visibility: inherit">
+            <div id="u570-2_div" class="u570_div" style="width: 30px; height: 16px;visibility: inherit"></div>
+            <div id="u570-2_text" class="text u570_text" style="visibility: inherit">
+              <p><span>Date</span></p>
+            </div>
+          </div>
+        </div>
+        <div id="u564-3" class="" style="width: 425px; height: 175px;">
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u565-3" class="ax_default box_1 u565" style="width: 425px; height: 175px; left: 0px; top: 0px;visibility: inherit">
+            <div id="u565-3_div" class="u565_div" style="width: 425px; height: 175px;visibility: inherit"></div>
+            <div id="u565-3_text" class="text u565_text" style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Image) -->
+          <div id="u566-3" class="ax_default image u566" style="width: 132px; height: 75px; left: 15px; top: 15px;visibility: inherit">
+            <img id="u566-3_img" class="img u566_img" src="images/news/u566.svg"/>
+            <div id="u566-3_text" class="text u566_text" style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u567-3" class="ax_default heading_3 u567" style="width: 132px; height: 39px; left: 15px; top: 101px;visibility: inherit">
+            <div id="u567-3_div" class="u567_div" style="width: 132px; height: 39px;visibility: inherit"></div>
+            <div id="u567-3_text" class="text u567_text" style="visibility: inherit">
+              <p><span>Article Title</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u568-3" class="ax_default label u568" style="width: 132px; height: 16px; left: 15px; top: 140px;visibility: inherit">
+            <div id="u568-3_div" class="u568_div" style="width: 132px; height: 16px;visibility: inherit"></div>
+            <div id="u568-3_text" class="text u568_text" style="visibility: inherit">
+              <p><span>Article Author</span></p>
+            </div>
+          </div>
+
+          <!-- Article Subtext (Rectangle) -->
+          <div id="u569-3" class="ax_default paragraph u569" data-label="Article Subtext" style="width: 250px; height: 145px; left: 157px; top: 21px;visibility: inherit">
+            <div id="u569-3_div" class="u569_div" style="width: 250px; height: 145px;visibility: inherit"></div>
+            <div id="u569-3_text" class="text u569_text" style="visibility: inherit">
+              <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam </span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u570-3" class="ax_default label u570" style="width: 30px; height: 16px; left: 390px; top: 5px;visibility: inherit">
+            <div id="u570-3_div" class="u570_div" style="width: 30px; height: 16px;visibility: inherit"></div>
+            <div id="u570-3_text" class="text u570_text" style="visibility: inherit">
+              <p><span>Date</span></p>
+            </div>
+          </div>
+        </div>
+        <div id="u564-4" class="" style="width: 425px; height: 175px;">
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u565-4" class="ax_default box_1 u565" style="width: 425px; height: 175px; left: 0px; top: 0px;visibility: inherit">
+            <div id="u565-4_div" class="u565_div" style="width: 425px; height: 175px;visibility: inherit"></div>
+            <div id="u565-4_text" class="text u565_text" style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Image) -->
+          <div id="u566-4" class="ax_default image u566" style="width: 132px; height: 75px; left: 15px; top: 15px;visibility: inherit">
+            <img id="u566-4_img" class="img u566_img" src="images/news/u566.svg"/>
+            <div id="u566-4_text" class="text u566_text" style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u567-4" class="ax_default heading_3 u567" style="width: 132px; height: 39px; left: 15px; top: 101px;visibility: inherit">
+            <div id="u567-4_div" class="u567_div" style="width: 132px; height: 39px;visibility: inherit"></div>
+            <div id="u567-4_text" class="text u567_text" style="visibility: inherit">
+              <p><span>Article Title</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u568-4" class="ax_default label u568" style="width: 132px; height: 16px; left: 15px; top: 140px;visibility: inherit">
+            <div id="u568-4_div" class="u568_div" style="width: 132px; height: 16px;visibility: inherit"></div>
+            <div id="u568-4_text" class="text u568_text" style="visibility: inherit">
+              <p><span>Article Author</span></p>
+            </div>
+          </div>
+
+          <!-- Article Subtext (Rectangle) -->
+          <div id="u569-4" class="ax_default paragraph u569" data-label="Article Subtext" style="width: 250px; height: 145px; left: 157px; top: 21px;visibility: inherit">
+            <div id="u569-4_div" class="u569_div" style="width: 250px; height: 145px;visibility: inherit"></div>
+            <div id="u569-4_text" class="text u569_text" style="visibility: inherit">
+              <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam </span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u570-4" class="ax_default label u570" style="width: 30px; height: 16px; left: 390px; top: 5px;visibility: inherit">
+            <div id="u570-4_div" class="u570_div" style="width: 30px; height: 16px;visibility: inherit"></div>
+            <div id="u570-4_text" class="text u570_text" style="visibility: inherit">
+              <p><span>Date</span></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u571" class="ax_default paragraph">
+        <div id="u571_div" class=""></div>
+        <div id="u571_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
   </body>
